fix: code with line numbers can overflow on small displays

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -221,6 +221,7 @@
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
     border-radius: $generic-border-radius
     margin-bottom: 16px
+    padding-right: 12px
 
   &--line-numbers
     padding: 5px 5px 0 5px
@@ -239,7 +240,7 @@
     hyphens: none
 
   &--code-wrapper
-    width: 100%
+    width: calc(100% - 20px)
     margin-bottom: -16px!important
 
   &--code,
